--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ gem "github-pages", group: :jekyll_plugins
 title: Anthony Martín Gras
 description: Software Engineer with an interest in Machine Learning, Data Science, & Analytics
 
-show_downloads: true
+show_downloads: false
 
